--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
             <a style="padding: 5px;
             padding-left: 15px ;
             padding-right: 15px;
-            color: rgb(235, 190, 225);
             text-decoration: none;
+            border: solid 3px;
+            border-color: violet;
+            color:wheat;
             font-size: 20px;
             font-family: Arial;
-            background-color: rgba(211, 11, 230, 0.836);
-            border-radius: 10px;
+            background-color: darkviolet;
+            border-radius: 20px;
         
              " href="http://www.google.com" >Atgal namo</a> 
                                                     
